--- a/Frontend/main.html
+++ b/Frontend/main.html
@@ -197,6 +197,26 @@
         window.location.href = "myAccount.html";
     });
 </script>
+<script>
+    document.getElementById("myAnnounce").addEventListener("click", function() {
+        window.location.href = "myAccount.html";
+    });
+</script>
+<script>
+    document.getElementById("contButton").addEventListener("click", function() {
+        window.location.href = "myAccount.html";
+    });
+</script>
+<script>
+    document.getElementById("contButton").addEventListener("click", function() {
+        window.location.href = "myAccount.html";
+    });
+</script>
+<script>
+    document.getElementById("contButton").addEventListener("click", function() {
+        window.location.href = "myAccount.html";
+    });
+</script>
 
 </body>
 </html>
