--- a/Frontend/myAccount.html
+++ b/Frontend/myAccount.html
@@ -150,7 +150,19 @@
     .delete-btn:hover {
       background-color: #c9302c;
     }
-
+    .choose-btn {
+      margin: 10px;
+      padding: 8px 12px;
+      background-color: #5dd94f;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .choose-btn:hover {
+      background-color: #23aa19;
+    }
     .round-button {
       position: fixed;
       bottom: 20px;
@@ -174,6 +186,49 @@
     .round-button:hover {
       background-color: black;
     }
+    /* Modal Styling */
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      width: 400px;
+      text-align: center;
+    }
+
+    .modal input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+
+    .modal button {
+      padding: 10px 20px;
+      background-color: #5dd94f;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .modal button:hover {
+      background-color: #23aa19;
+    }
+
   </style>
 </head>
 <body>
@@ -215,6 +270,16 @@
   <i class="material-icons">arrow_back_ios</i>
 </button>
 
+<!-- Modal pentru introducerea email-ului -->
+<div id="chooseModal" class="modal">
+  <div class="modal-content">
+    <h3>Pentru a rezerva acest serviciu, introdu mailul:</h3>
+    <input type="email" id="userEmail" placeholder="Introduceti email-ul" required />
+    <button id="submitEmailButton">Trimite</button>
+    <button id="closeModalButton">Închide</button>
+  </div>
+</div>
+
 <script>
   document.getElementById("backButton").addEventListener("click", function() {
     window.location.href = "main.html";
@@ -240,7 +305,25 @@
     window.location.href = "myAccount.html";
   });
 
-    // 1️⃣ DELETE FUNCTION GOES HERE
+  function openChooseModal() {
+    document.getElementById("chooseModal").style.display = "flex";
+  }
+  document.getElementById("closeModalButton").addEventListener("click", function() {
+    document.getElementById("chooseModal").style.display = "none";
+  });
+
+  // Funcția pentru trimiterea email-ului
+  document.getElementById("submitEmailButton").addEventListener("click", function() {
+    const email = document.getElementById("userEmail").value;
+    if (email) {
+      alert("Email-ul a fost trimis pentru rezervare: " + email);
+      document.getElementById("chooseModal").style.display = "none";
+    } else {
+      alert("Te rog să introduci un email valid.");
+    }
+  });
+
+  // 1️⃣ DELETE FUNCTION GOES HERE
     async function deleteAnnouncement(announcementId, cardElement) {
     if (!announcementId) {
     alert("ID-ul anunțului lipsește!");
@@ -276,6 +359,27 @@
     alert("A apărut o eroare la ștergere!");
   }
   }
+  async function chooseAnnouncement(announcementId) {
+    if (!announcementId) {
+      alert("ID-ul anunțului lipsește!");
+      return;
+    }
+
+    // Exemplu de acțiune: deschiderea unui modal pentru a rezerva anunțul
+    openChooseModal();
+    document.getElementById("chooseModal").dataset.announcementId = announcementId;
+  }
+
+  document.addEventListener("DOMContentLoaded", function() {
+    // Adăugarea evenimentului la butonul "Alege" din fiecare card
+    const chooseButtons = document.querySelectorAll('.choose-btn');
+    chooseButtons.forEach(button => {
+      button.addEventListener('click', function() {
+        const announcementId = button.getAttribute('data-id');
+        chooseAnnouncement(announcementId);
+      });
+    });
+  });
 
     // 2️⃣ USER DATA FETCH FUNCTION (MODIFIED WITH DELETE BUTTON)
     async function fetchUserData() {
@@ -321,7 +425,10 @@
             <h3>${ad.name}</h3>
             <p>${ad.description}</p>
             <p><strong>Preț:</strong> ${ad.price} ore</p>
-            <button class="delete-btn" data-id="${ad._id}">Șterge</button>
+             <div class="card-actions">
+              <button class="delete-btn" data-id="${ad._id}">Șterge</button>
+              <button class="choose-btn" data-id="${ad._id}">Alege</button>
+             </div>
           `;
 
     const deleteButton = card.querySelector('.delete-btn');
@@ -341,6 +448,27 @@
   }
 
     document.addEventListener("DOMContentLoaded", fetchUserData);
+  // Funcția pentru deschiderea modalului
+  function openChooseModal() {
+    document.getElementById("chooseModal").style.display = "flex";
+  }
+
+  // Funcția pentru închiderea modalului
+  document.getElementById("closeModalButton").addEventListener("click", function() {
+    document.getElementById("chooseModal").style.display = "none";
+  });
+
+  // Funcția pentru trimiterea email-ului
+  document.getElementById("submitEmailButton").addEventListener("click", function() {
+    const email = document.getElementById("userEmail").value;
+    if (email) {
+      alert("Email-ul a fost trimis pentru rezervare: " + email);
+      document.getElementById("chooseModal").style.display = "none";
+    } else {
+      alert("Te rog să introduci un email valid.");
+    }
+  });
+
 </script>
 
 </script>
