--- a/Frontend/announceView.html
+++ b/Frontend/announceView.html
@@ -131,6 +131,7 @@
   </style>
 </head>
 <body>
+<script src="notifications.js"></script>
 
 <div class="navbar">
   <div class="logo">JustInTime</div>
