--- a/Frontend/map.html
+++ b/Frontend/map.html
@@ -193,6 +193,7 @@
         <i class="material-icons">arrow_back_ios</i>
     </button>
 </div>
+<script src="notifications.js"></script>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
