--- a/Frontend/favorite.html
+++ b/Frontend/favorite.html
@@ -131,6 +131,8 @@
     </style>
 </head>
 <body>
+<script src="notifications.js"></script>
+
 <div class="navbar">
     <div class="logo">JustInTime</div>
 
